Modify main.yml file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           browser: chrome
           headless: true
-          record: false  # Set to true if using Cypress Dashboard
+          record: false 
